# open-meetings

./: .gitignore  README.md
containers/: README.md  delete.sh  run.sh  run_mongodb.sh  run_tika.sh  run_typesense.sh  setup.sh  start.sh  stop.sh  tika-config.xml  tika-dockerfile  vars.sh
controller/: pom.xml
riomp-scrape/: out.html  out2.html  pyproject.toml
riomp-scrape/riomp_scrape/: __init__.py  analysis.py  body.py  execute.py  io_utils.py  meeting.py  nohup.out  objects.py  scrape.py  utils.py
riomp-scrape/tests/: test_scrape.py
riomp-scrape/tests/data/: 1009540.html  1037938.html  empty.html  https:%2F%2Fopengov%2Esos%2Eri%2Egov%2FOpenMeetingsPublic%2FGovDirectory?subtopmenuId=202&EntityID=3570&MeetingID=0.html  https:%2F%2Fopengov%2Esos%2Eri%2Egov%2FOpenMeetingsPublic%2FOpenMeetingDashboard?subtopmenuId=201&EntityID=3570&MeetingID=0.html  mock_cancelled_meeting.html  mock_document_links.html  ripta_body.html
riomp-scrape/thread/: analysis.py  download.py  process.py
scrape/: pyproject.toml
scrape/scrape/: constants.py  download.py  index.py  io_utils.py  parse.py  resource_type.py  run.py  store.py  test.py  thread.py  validate.py
scrape/tests/: test_scrape.py
scrape/tests/pages/: https:%2F%2Fopengov%2Esos%2Eri%2Egov%2FOpenMeetingsPublic%2FBoardMembers?subtopmenuId=203&EntityID=3570&MeetingID=0.html  https:%2F%2Fopengov%2Esos%2Eri%2Egov%2FOpenMeetingsPublic%2FOpenMeetingDashboard?subtopmenuId=201&EntityID=2187.html  https:%2F%2Fopengov%2Esos%2Eri%2Egov%2FOpenMeetingsPublic%2FViewMeetingDetailByID?MeetingID=1041874.html  ripta_body_rendered.html
(+103 files in other folders)
