[tool.poetry]
name = "riomp-scrape"
version = "0.1.0"
license = "MIT"
description = "A web scraper for the Rhode Island open meetings portal."
authors = ["Michael Kearney <michaelkearney55@gmail.com>", "Lizzy Zhang <>", "Ronnie Shashoua <>", "Austin Miles <>"]
readme = "README.md"
packages = [{include = "riomp_scrape"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.28.2"
pytest = "^7.3.1"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
modin = "^0.20.0"
requests-html = "^0.10.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
